# Functional-proggramming

./: README.md  colon.cabal
examples/: factorial.colon  if-zero.colon  if-zero.output  multiplication-table.colon  multiplication-table.output  uppercase.colon  uppercase.output  variables.colon  variables.output
exe/: Main.hs
src/Language/Colon/: Parsing.hs  Semantic.hs  Syntax.hs
test/: Main.hs
test/Language/Colon/Semantic/: Spec.hs
